attempt to re-introduce rook-ceph - as an external cluster

--- a/kubernetes/moria/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/moria/flux/vars/cluster-secrets.sops.yaml
@@ -13,6 +13,28 @@ stringData:
     SECRET_DSM_IP: ENC[AES256_GCM,data:HkykZ+K2pfEj8RRQZQ==,iv:PW93YzjIc+ouTUYpaV1jBpiTnMRgI32gPRoY0/CNAaI=,tag:mumGHDZOVCghxIrn/vhkRg==,type:str]
     SECRET_LATITUDE: ENC[AES256_GCM,data:K1kx9+JUDKoKBw==,iv:TMDoDblFHFtCbPxDTTHj3TsrSJPlC4tSMdPORtU+S9g=,tag:r9Eg3Rac2DlKvETE7l83Jg==,type:str]
     SECRET_LONGITUDE: ENC[AES256_GCM,data:y67UvSLgN/RtowE=,iv:TjGEQaxQ9YeKvO7UWU6J/YwarPKgYXWjRiElKVftxlU=,tag:w719lO4jIEZeAm1dqdQNrA==,type:str]
+    ROOK_EXTERNAL_ADMIN_SECRET: ENC[AES256_GCM,data:HmvN1u2Mi2TnfegzPxHeXy6hZrQ9nDx/eeDfEwxotpepfbtlNhk8hA==,iv:QPeJpTbfEzlkvgQAMV8CaF2mVM0Vec+Jfc0/CF7F2/s=,tag:Fxotwo4GRmNw5r8U2PZGfA==,type:str]
+    ROOK_EXTERNAL_MONITOR_SECRET: ENC[AES256_GCM,data:Wa2wE8sg8+hyXm5I+WzeqWFSXd58UJQzv3A1rd2KQpGDB4UnjqSXmA==,iv:g3psNjbanaKYAWSZD2LSrrWsnzbyjM2KkzgmEFWy4Sc=,tag:342eMsS/w1zIcHu1knb67g==,type:str]
+    ROOK_EXTERNAL_FSID: ENC[AES256_GCM,data:WOezzVx6QIFZWDYh0LhqWmVI/kc2bbtSWwt+L28NWmNvrqiD,iv:3XzcHiYFQHq2qqciAMYtwvS2l2V3HoWL87oQqtiexK4=,tag:mYyOAjvl3WoqBvlCSrLg3w==,type:str]
+    #ENC[AES256_GCM,data:r38WCbN0/xMQ7jvIMX6LwDJT7UeECE6zByOHOkiNNmPuZEqD9L9w23rr2Q7XMjWAucTJLRQ=,iv:uBCjmhsnrsOTDVDjB0cPANdsPYzAQme57z5eltD9ovo=,tag:UgTXoiGZ/JhSNYU3ak9qvA==,type:comment]
+    ROOK_EXTERNAL_CEPH_MON_DATA: ENC[AES256_GCM,data:nN49evdgjopF3mJTYO01H7CP3dyOZp+OOe7pxjDbV+vbLpbmMkG+9Q6g5p5jRb5DSRosAnImlmCa/Vt05pYLy0mD/YngQomuoXLRMU/iixvKHQa0Cea+3Ecnhu27evUplA+JViWgE/lBtAn8yut6x7fFgzNOP2yq/7RFUMdGikLVoJ3v,iv:MOwrogZnsYjXSXYn95MFgd/wkw3GnS5Zi+8APsw3bok=,tag:Njf93Q1doPyj7pkSgCAv4g==,type:str]
+    ROOK_EXTERNAL_USERNAME: ENC[AES256_GCM,data:z4W2fi3Qk0tavdyuiZ+Lhr3zaqY=,iv:/l9K3f28VDDZcnSCDdLsnz/fa6H7GvW4XK53yFo3nVc=,tag:Az7NL9y92W9j+u3i8UwoeQ==,type:str]
+    ROOK_EXTERNAL_USER_SECRET: ENC[AES256_GCM,data:iOXd28MSoM5QLmD1guQkcOsa2xPGd7T6TBw+HqAQlQF7iccvZNSWsA==,iv:JeRCIE4OnyKgFdK79Jo/LGpD4pdzX/R/LANFKdxbmRM=,tag:ANMRc98BNwLXyFZoMWiWzw==,type:str]
+    RBD_POOL_NAME: ENC[AES256_GCM,data:k65LCJcOoo92+eD1Xk4=,iv:nYNt2ii49uK6kYcS75uoWFOKtHYIngEzwQxxOsHnb3k=,tag:OfvE+unl3KgDV0MmfknrGg==,type:str]
+    CSI_RBD_NODE_SECRET_NAME: ENC[AES256_GCM,data:Z/1p88ZL2LUn+Cye,iv:c1b3kYEgJGGQ7R1HXx6U6RPFC9sR6V48Ddcl7/R5p+M=,tag:iWoHVStGufYXaH484Io0Wg==,type:str]
+    CSI_RBD_NODE_SECRET: ENC[AES256_GCM,data:QIYAWcZrXrc0iX6Bn4Wbgl38S+qrk1dGzk0lKEUVFtYDLJajFq8ORA==,iv:pd2FxqqTNJwbAP56Bvi75nQj/heNEcq4UWU68P+xb7A=,tag:CWo7f0S85l/9ST0GYCT5Ow==,type:str]
+    CSI_RBD_PROVISIONER_SECRET_NAME: ENC[AES256_GCM,data:OdYerbAJIe7/ypDUx30PjE+sfQ==,iv:anotZreEK/USAfSdYG8mLQ8hMyhyJ6J+50LthJhoYxQ=,tag:HAaj6mpWC1yBZItQZtb7ag==,type:str]
+    CSI_RBD_PROVISIONER_SECRET: ENC[AES256_GCM,data:iEMitcERuAOq3PL+RW2Ctm92AZwSk55cSGUtfWBlkbsOzkUHPqpNaw==,iv:KQZ97VYnApyl7oVZ3VCEfIEKPgzzdHeg3MB48laxLHY=,tag:T6UHtuFBXjF+DuREyh/qcA==,type:str]
+    CEPHFS_POOL_NAME: ENC[AES256_GCM,data:GgDc1IWx7fC26+DgOEULubjL1w==,iv:ZPrwqnWYiIR9KADbDaSiryIDsJlMjydbIvAxBdP5zgE=,tag:brCd4bfat2693Kex9hhsKg==,type:str]
+    CEPHFS_METADATA_POOL_NAME: ENC[AES256_GCM,data:FzLapz/TBabmUHmafkEjajqRCzPmoDM=,iv:Ft88sWWGjU4L1k9BQ6X0ZWA7QuBCgzeSYjEy7YAaG1M=,tag:ktwaF7zDmoHpfOLVaaPx2Q==,type:str]
+    CEPHFS_FS_NAME: ENC[AES256_GCM,data:b+HFwyKGcc6gXgZMA0c=,iv:sD3BegJ1VTE2WK6wCa+vdNduu3W1D3Tz0jCIqePWpw8=,tag:IBtaA/CuSRqsv5P7aoPt7A==,type:str]
+    CSI_CEPHFS_NODE_SECRET_NAME: ENC[AES256_GCM,data:8LoUuH/QMhi3Dg25Qf2m,iv:zX4Dr6M8v+OQDzP53XIyOKwu+XK4TDEaGMmeWddi2sQ=,tag:/CBIcmSS+JGfYuQz9DeW6A==,type:str]
+    CSI_CEPHFS_NODE_SECRET: ENC[AES256_GCM,data:peWpBvtKVVl56B6bbUYBvJ9jEqEMoDnx9KIGwnEB+WlOaxbflaasjA==,iv:z2xtq9jg2VyAvRJjBmwLn8CxuqSBn8kKThoGp5OAYi8=,tag:UrA+y12hxB3DyAWa3QUytw==,type:str]
+    CSI_CEPHFS_PROVISIONER_SECRET_NAME: ENC[AES256_GCM,data:x/TCVuDpguGGvT+PuFpX2sEmuef9Gg==,iv:mdCQLIx+iSu+7QZx2rcZCBzoaPweGG82JVodkVIAzxs=,tag:XEtrNzOljZWrPgqQNLqElg==,type:str]
+    CSI_CEPHFS_PROVISIONER_SECRET: ENC[AES256_GCM,data:yPNQMLghPBTGejIX67XSu1KE8/QQO7Xtopj9lXsfmV9FyPQtlNFgzQ==,iv:RG3vR/xJI2BpccTyj08vLpLZTNO4HdowRxnXwKwqehM=,tag:SZ2BrVQS3VcrifFArThGKw==,type:str]
+    #ENC[AES256_GCM,data:QAa4AANrrWxdtDX/ThZWg0kchg==,iv:gVDe8puo0jR5VXgFBkG3/D9RljtUVRNNOKbrSeOT/XA=,tag:cth+Ky+0QdhyhLoVGt5NEg==,type:comment]
+    CEPH1_NODE: ENC[AES256_GCM,data:6e7uQE6hES8WSoA/caz1,iv:+kUutSsxAFRPvTnWy85A1mRFKRLPJMakXF4ack2ewy8=,tag:9NSP3avBabu0claTSS1q0w==,type:str]
+    CEPH2_NODE: ENC[AES256_GCM,data:1xViCVFSDLLRCe8K6mPq,iv:06gGHLs4TbiYNm6v0qQ/qzq7EYzTelpEfNtJnEi7Xoc=,tag:IeC7gLsseH8lXqCKMHamFQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -28,8 +50,8 @@ sops:
             SzVNazYrZGQ2RFdSMzJSTjI4b0VEd3cKnRl3+Sf2Wiq6/Wvs0Y9ckU/RfrpP6TB9
             iUAUUKSHM7erhHNYrPf+Zf/uWTzVAkyVeaVQAvDe3uB9WmDfUuL7hA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-27T22:50:46Z"
-    mac: ENC[AES256_GCM,data:qo5idSM8GmBsjIlweP40P0BWStfHFEAfe8qOXYL3IKAdCb7e7W9GvjI2prh6fOTmHvAkxBp1apC8Ql9ooX58xhVxluDF068QY+Ao2fLCwu/OdON6i0SavcaKQfKXaUKX4vkNUt1Msb5cBosdO7nBvLetvkI7ca9vFygd7H16Q5U=,iv:G2Ubq2VLNScEBS7sZhd2WoFfv3uNxcAjnaCqY73/gZ8=,tag:Glre4DSjntzseKjaLCJWBw==,type:str]
+    lastmodified: "2025-01-11T18:30:55Z"
+    mac: ENC[AES256_GCM,data:ZZQsrvYV2WnZXnMcW+CiApwF9B2qp3MEoCJZynHJecof0+E+uvM94ZNUYd8YF5xQZWGaQABJNwdtPiluxUIxDSwEh9hIuLZz6uUh/GtYhT9nqDzQwWwC/aJiQgVXzF4J8OEpHAAKwS8x5KIaMKjh+fz+lJ5RFNKpsRNLMuslyk0=,iv:sGnK3uEgmQUJUmt96Sd7TnxvJ61xyZI7YPE5WfSwCXU=,tag:j2c2DPNFYFB5kBTx6h0v7Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
