--- a/kubernetes/moria/apps/storage/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/moria/apps/storage/rook-ceph/cluster/helmrelease.yaml
@@ -78,7 +78,7 @@ spec:
 
     # # -- A list of CephObjectStore configurations to deploy
     # # @default -- See [below](#ceph-object-stores)
-    # cephObjectStores:
+    cephObjectStores: []
     #   - name: ceph-objectstore
     #     spec:
     #       gateway:
