--- a/kubernetes/moria/apps/default/hoarder/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/hoarder/app/helmrelease.yaml
@@ -41,6 +41,9 @@ spec:
               #INFERENCE_TEXT_MODEL: "mistral-nemo"
               #INFERENCE_IMAGE_MODEL: "llava"
               INFERENCE_CONTEXT_LENGTH: 4096
+              CRAWLER_VIDEO_DOWNLOAD: true
+              CRAWLER_FULL_PAGE_ARCHIVE: true
+              CRAWLER_FULL_PAGE_SCREENSHOT: true
             envFrom: &envFrom
               - secretRef:
                   name: hoarder-secret
