--- a/kubernetes/moria/apps/storage/namespace.yaml
+++ b/kubernetes/moria/apps/storage/namespace.yaml
@@ -4,6 +4,6 @@ kind: Namespace
 metadata:
   name: storage
   labels:
-    kustomize.toolkit.fluxcd.io/prune: true
+    kustomize.toolkit.fluxcd.io/prune: "true"
     volsync.backube/privileged-movers: "true"
     goldilocks.fairwinds.com/enabled: "true"
