--- a/kubernetes/moria/apps/storage/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/moria/apps/storage/rook-ceph/cluster/helmrelease.yaml
@@ -52,7 +52,7 @@ spec:
     # -- Settings for the block pool snapshot class
     # @default -- See [RBD Snapshots](../Storage-Configuration/Ceph-CSI/ceph-csi-snapshot.md#rbd-snapshots)
     cephBlockPoolsVolumeSnapshotClass:
-      enabled: true
+      enabled: false
       name: ceph-rbd-snapshot
       isDefault: true
       deletionPolicy: Delete
@@ -60,7 +60,7 @@ spec:
       parameters: # Only pool needs to be specified as snapshotter secret and clusterID are already pre-selected
         pool: talos-moria-pv
     cephFileSystemVolumeSnapshotClass:
-      enabled: true
+      enabled: false
       name: cephfs-snapshot
       isDefault: false
       deletionPolicy: Delete
