--- a/kubernetes/moria/apps/storage/rook-ceph/ks.yaml
+++ b/kubernetes/moria/apps/storage/rook-ceph/ks.yaml
@@ -11,11 +11,11 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   path: ./kubernetes/moria/apps/storage/rook-ceph/app
-  prune: false
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
-  wait: true
+  wait: false
   interval: 30m
   retryInterval: 1m
   timeout: 5m
