--- a/kubernetes/moria/apps/storage/rook-ceph/ks.yaml
+++ b/kubernetes/moria/apps/storage/rook-ceph/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   path: ./kubernetes/moria/apps/storage/rook-ceph/app
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -34,7 +34,7 @@ spec:
   dependsOn:
     - name: rook-ceph
   path: ./kubernetes/moria/apps/storage/rook-ceph/cluster
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
