--- a/kubernetes/shared/templates/volsync/minio.yaml
+++ b/kubernetes/shared/templates/volsync/minio.yaml
@@ -32,11 +32,11 @@ spec:
 #   restic:
 #     copyMethod: Snapshot
 #     repository: "${APP}-volsync-minio"
-#     cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-ceph-block}"
+#     cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-ceph-rbd}"
 #     cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
 #     cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-1Gi}"
-#     storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
-#     volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-csi-ceph-blockpool}"
+#     storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-rbd}"
+#     volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-ceph-rbd-snapshot}"
 #     moverSecurityContext:
 #       runAsUser: ${APP_UID:-568}
 #       runAsGroup: ${APP_GID:-568}
@@ -57,11 +57,11 @@ spec:
   restic:
     copyMethod: "${VOLSYNC_COPYMETHOD:-Snapshot}"
     repository: "${APP}-volsync-minio-secret"
-    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-csi-ceph-blockpool}"
+    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-ceph-rbd-snapshot}"
     cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-1Gi}"
-    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-ceph-block}"
+    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-ceph-rbd-snapshot}"
     cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
-    storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
+    storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-rbd}"
     accessModes: ["${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"]
     moverSecurityContext:
       runAsUser: ${APP_UID:-568}
