--- a/kubernetes/moria/apps/default/homepage/ks.yaml
+++ b/kubernetes/moria/apps/default/homepage/ks.yaml
@@ -28,4 +28,4 @@ spec:
       APP: *app
       VOLSYNC_STORAGECLASS: syno-iscsi-delete
       VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
-      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
+      # VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
