--- a/kubernetes/moria/apps/default/sabnzbd/ks.yaml
+++ b/kubernetes/moria/apps/default/sabnzbd/ks.yaml
@@ -30,4 +30,4 @@ spec:
       VOLSYNC_CAPACITY: 1Gi
       VOLSYNC_STORAGECLASS: syno-iscsi-delete
       VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
-      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
+      #VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
