--- a/kubernetes/moria/apps/flux-system/capacitor/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/flux-system/capacitor/app/helmrelease.yaml
@@ -36,10 +36,10 @@ spec:
             resources:
               requests:
                 cpu: 50m
-                memory: 100Mi
+                memory: 128M
                 ephemeral-storage: 1Gi
               limits:
-                memory: 200Mi
+                memory: 384M
                 ephemeral-storage: 2Gi
             securityContext:
               allowPrivilegeEscalation: false
