--- a/kubernetes/moria/apps/default/pgadmin/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/pgadmin/app/helmrelease.yaml
@@ -61,10 +61,10 @@ spec:
               readiness: *probes
             resources:
               requests:
-                cpu: 50m
-                memory: 100Mi
+                cpu: 15m
+                memory: 256M
               limits:
-                memory: 500Mi
+                memory: 512M
     defaultPodOptions:
       securityContext:
         runAsUser: 5050
