--- a/kubernetes/moria/apps/default/redlib/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/redlib/app/helmrelease.yaml
@@ -59,6 +59,8 @@ spec:
             resources:
               requests:
                 cpu: 50m
+                memory: 128Mi
+              limits:
                 memory: 256Mi
     service:
       app:
