--- a/kubernetes/moria/apps/default/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/sabnzbd/app/helmrelease.yaml
@@ -72,7 +72,7 @@ spec:
                 cpu: 100m
                 memory: 128Mi
               limits:
-                memory: 4Gi
+                memory: 512Mi
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
