--- a/kubernetes/moria/apps/network/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/network/cloudflared/app/helmrelease.yaml
@@ -68,10 +68,10 @@ spec:
               capabilities: { drop: ["ALL"] }
             resources:
               requests:
-                cpu: 10m
-                memory: 128Mi
+                cpu: 15m
+                memory: 100M
               limits:
-                memory: 256Mi
+                memory: 128M
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
