--- a/kubernetes/moria/apps/network/echo-server/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/network/echo-server/app/helmrelease.yaml
@@ -54,8 +54,9 @@ spec:
             resources:
               requests:
                 cpu: 10m
+                memory: 100M
               limits:
-                memory: 64Mi
+                memory: 128M
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
