--- a/kubernetes/moria/apps/default/hoarder/ks.yaml
+++ b/kubernetes/moria/apps/default/hoarder/ks.yaml
@@ -26,6 +26,6 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 5Gi
-      VOLSYNC_STORAGECLASS: syno-iscsi-delete
-      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
-      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
+      # VOLSYNC_STORAGECLASS: syno-iscsi-delete
+      # VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
+      # VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
