--- a/kubernetes/moria/apps/default/kustomization.yaml
+++ b/kubernetes/moria/apps/default/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Apps
-  #- ./hoarder/ks.yaml
+  - ./hoarder/ks.yaml
   - ./homepage/ks.yaml
   - ./kavita/ks.yaml
 # borked during csi migration
