--- a/kubernetes/moria/apps/default/kustomization.yaml
+++ b/kubernetes/moria/apps/default/kustomization.yaml
@@ -15,7 +15,7 @@ resources:
   - ./open-webui/ks.yaml
   - ./overseerr/ks.yaml
   - ./pgadmin/ks.yaml
-#  - ./plex/ks.yaml
+  - ./plex/ks.yaml
   - ./prowlarr/ks.yaml
   - ./readarr/ks.yaml
   - ./redlib/ks.yaml
