--- a/kubernetes/moria/apps/default/plex/app/pvc.yaml
+++ b/kubernetes/moria/apps/default/plex/app/pvc.yaml
@@ -1,3 +1,14 @@
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: plex-cache
+spec:
+  accessModes: ["ReadWriteOnce"]
+  resources:
+    requests:
+      storage: 30Gi
+  storageClassName: ceph-rbd
 # ---
 # apiVersion: v1
 # kind: PersistentVolumeClaim
@@ -8,15 +19,4 @@
 #   resources:
 #     requests:
 #       storage: 50Gi
-#   storageClassName: ceph-block
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: plex-cache
-spec:
-  accessModes: ["ReadWriteOnce"]
-  resources:
-    requests:
-      storage: 50Gi
-  storageClassName: syno-iscsi-delete
+#   storageClassName: syno-iscsi-delete
