--- a/kubernetes/moria/apps/storage/rook-ceph/cluster/storageclass.yaml
+++ b/kubernetes/moria/apps/storage/rook-ceph/cluster/storageclass.yaml
@@ -37,3 +37,42 @@ parameters:
   pool: ${CEPHFS_POOL_NAME}
 allowVolumeExpansion: true
 reclaimPolicy: Delete
+---
+allowVolumeExpansion: true
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: ceph-rbd-retain
+provisioner: storage.rbd.csi.ceph.com # Has to match namespace
+parameters:
+  clusterID: storage
+  csi.storage.k8s.io/controller-expand-secret-name: rook-csi-rbd-provisioner
+  csi.storage.k8s.io/controller-expand-secret-namespace: storage
+  csi.storage.k8s.io/fstype: ext4
+  csi.storage.k8s.io/node-stage-secret-name: rook-csi-rbd-node
+  csi.storage.k8s.io/node-stage-secret-namespace: storage
+  csi.storage.k8s.io/provisioner-secret-name: rook-csi-rbd-provisioner
+  csi.storage.k8s.io/provisioner-secret-namespace: storage
+  # imageFeatures: layering
+  imageFeatures: layering,fast-diff,object-map,deep-flatten,exclusive-lock
+  imageFormat: "2"
+  pool: ${RBD_POOL_NAME}
+reclaimPolicy: Retain
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: cephfs-retain
+provisioner: storage.cephfs.csi.ceph.com # Has to match namespace
+parameters:
+  clusterID: storage
+  csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
+  csi.storage.k8s.io/controller-expand-secret-namespace: storage
+  csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
+  csi.storage.k8s.io/node-stage-secret-namespace: storage
+  csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
+  csi.storage.k8s.io/provisioner-secret-namespace: storage
+  fsName: ${CEPHFS_FS_NAME}
+  pool: ${CEPHFS_POOL_NAME}
+allowVolumeExpansion: true
+reclaimPolicy: Retain
