--- a/kubernetes/moria/apps/default/kustomization.yaml
+++ b/kubernetes/moria/apps/default/kustomization.yaml
@@ -8,17 +8,25 @@ resources:
   # Apps
   - ./hoarder/ks.yaml
   - ./homepage/ks.yaml
-  - ./kavita/ks.yaml
+#  - ./kavita/ks.yaml
+##
 # borked during csi migration
 #  - ./librechat/ks.yaml
 #  - ./n8n/ks.yaml
-  - ./open-webui/ks.yaml
+##
+#  - ./open-webui/ks.yaml
+##
 #  - ./overseerr/ks.yaml
-  - ./pgadmin/ks.yaml
+##
+#  - ./pgadmin/ks.yaml
   - ./plex/ks.yaml
+  ##
 #  - ./prowlarr/ks.yaml
 #  - ./readarr/ks.yaml
+##
   - ./redlib/ks.yaml
+##
 #  - ./sabnzbd/ks.yaml
 #  - ./tautulli/ks.yaml
+##
   - ./valheim/ks.yaml
