--- a/kubernetes/moria/apps/default/kustomization.yaml
+++ b/kubernetes/moria/apps/default/kustomization.yaml
@@ -8,19 +8,19 @@ resources:
   # Apps
   - ./hoarder/ks.yaml
   - ./homepage/ks.yaml
-#  - ./kavita/ks.yaml
+  - ./kavita/ks.yaml
 ##
 # borked during csi migration
 #  - ./librechat/ks.yaml
 #  - ./n8n/ks.yaml
 ##
-#  - ./open-webui/ks.yaml
+  - ./open-webui/ks.yaml
 ##
 #  - ./overseerr/ks.yaml
 ##
-#  - ./pgadmin/ks.yaml
+  - ./pgadmin/ks.yaml
   - ./plex/ks.yaml
-  ##
+##
 #  - ./prowlarr/ks.yaml
 #  - ./readarr/ks.yaml
 ##
