--- a/kubernetes/moria/apps/default/pgadmin/ks.yaml
+++ b/kubernetes/moria/apps/default/pgadmin/ks.yaml
@@ -16,7 +16,7 @@ spec:
     kind: GitRepository
     name: home-kubernetes
   dependsOn:
-    - name: synology-csi-driver
+    - name: rook-ceph
     - name: volsync
     - name: external-secrets-stores
     - name: cloudnative-pg
@@ -31,6 +31,3 @@ spec:
       APP_UID: "5050"
       APP_GID: "5050"
       VOLSYNC_CAPACITY: 2Gi
-      VOLSYNC_STORAGECLASS: syno-iscsi-delete
-      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
-      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
