--- a/.taskfiles/VolSync/templates/replicationdestination.tmpl.yaml
+++ b/.taskfiles/VolSync/templates/replicationdestination.tmpl.yaml
@@ -11,7 +11,7 @@ spec:
     repository: "${app}-volsync-r2-secret"
     destinationPVC: "${claim}"
     copyMethod: Direct
-    storageClassName: syno-iscsi-delete
+    storageClassName: ceph-block
     # storageClassName: ceph-filesystem
     # accessModes: ["ReadWriteMany"]
     # IMPORTANT NOTE:
