--- a/kubernetes/moria/apps/network/namespace.yaml
+++ b/kubernetes/moria/apps/network/namespace.yaml
@@ -4,5 +4,5 @@ kind: Namespace
 metadata:
   name: network
   labels:
-    kustomize.toolkit.fluxcd.io/prune: true
+    kustomize.toolkit.fluxcd.io/prune: disabled
     goldilocks.fairwinds.com/enabled: "true"
