--- a/kubernetes/moria/apps/network/netalertx/app/pvc.yaml
+++ b/kubernetes/moria/apps/network/netalertx/app/pvc.yaml
@@ -12,7 +12,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: syno-iscsi-delete
+  storageClassName: ceph-rbd
 
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
@@ -50,11 +50,11 @@ spec:
   restic:
     copyMethod: Snapshot
     repository: "netalertx-db-volsync-r2-secret"
-    cacheStorageClassName: "syno-iscsi-delete"
+    cacheStorageClassName: "ceph-rbd"
     cacheAccessModes: ["ReadWriteOnce"]
     cacheCapacity: "1Gi"
-    storageClassName: "syno-iscsi-delete"
-    volumeSnapshotClassName: "syno-iscsi-delete"
+    storageClassName: "ceph-rbd"
+    volumeSnapshotClassName: "ceph-rbd-snapshot"
     moverSecurityContext:
       runAsUser: ${APP_UID:-568}
       runAsGroup: ${APP_GID:-568}
@@ -75,11 +75,11 @@ spec:
   restic:
     copyMethod: "Snapshot"
     repository: "netalertx-db-volsync-r2-secret"
-    volumeSnapshotClassName: "syno-iscsi-delete"
+    volumeSnapshotClassName: "ceph-rbd-snapshot"
     cacheCapacity: "1Gi"
-    cacheStorageClassName: "syno-iscsi-delete"
+    cacheStorageClassName: "ceph-rbd""
     cacheAccessModes: ["ReadWriteOnce"]
-    storageClassName: "syno-iscsi-delete"
+    storageClassName: "ceph-rbd"
     accessModes: ["ReadWriteOnce"]
     moverSecurityContext:
       runAsUser: ${APP_UID:-568}
