--- a/kubernetes/moria/apps/network/netalertx/ks.yaml
+++ b/kubernetes/moria/apps/network/netalertx/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: synology-csi-driver
+    - name: rook-ceph
     - name: volsync
     - name: external-secrets-stores
   path: "./kubernetes/moria/apps/network/netalertx/app"
@@ -27,6 +27,3 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 5Gi
-      VOLSYNC_STORAGECLASS: syno-iscsi-delete
-      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
-      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
