make sure everything is using rook-ceph and not syno csi, even if it's currently disabled

--- a/kubernetes/moria/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/plex/app/helmrelease.yaml
@@ -24,10 +24,8 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: synology-csi-driver
+    - name: rook-ceph
       namespace: storage
-    - name: volsync
-      namespace: volsync-system
   values:
     controllers:
       plex:
