--- a/kubernetes/moria/apps/default/hoarder/ks.yaml
+++ b/kubernetes/moria/apps/default/hoarder/ks.yaml
@@ -11,9 +11,9 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: synology-csi-driver
-    - name: volsync
     - name: external-secrets-stores
+    - name: rook-ceph
+    - name: volsync
   path: ./kubernetes/moria/apps/default/hoarder/app
   prune: true
   sourceRef:
@@ -26,6 +26,3 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 5Gi
-      # VOLSYNC_STORAGECLASS: syno-iscsi-delete
-      # VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
-      # VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
