--- a/kubernetes/moria/apps/default/librechat/ks.yaml
+++ b/kubernetes/moria/apps/default/librechat/ks.yaml
@@ -11,10 +11,10 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: synology-csi-driver
-    - name: volsync
     - name: external-secrets-stores
     - name: cloudnative-pg
+    - name: rook-ceph
+    - name: volsync
   path: ./kubernetes/moria/apps/default/librechat/app
   prune: true
   sourceRef:
@@ -28,6 +28,3 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 10Gi
-      VOLSYNC_STORAGECLASS: syno-iscsi-delete
-      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
-      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
