--- a/kubernetes/moria/apps/default/n8n/ks.yaml
+++ b/kubernetes/moria/apps/default/n8n/ks.yaml
@@ -16,9 +16,9 @@ spec:
     kind: GitRepository
     name: home-kubernetes
   dependsOn:
-    - name: synology-csi-driver
-    - name: volsync
     - name: external-secrets-stores
+    - name: rook-ceph
+    - name: volsync
   wait: true
   interval: 30m
   retryInterval: 1m
@@ -27,6 +27,3 @@ spec:
     substitute:
       APP: n8n
       VOLSYNC_CAPACITY: 2Gi
-      VOLSYNC_STORAGECLASS: syno-iscsi-delete
-      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
-      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
