--- a/kubernetes/moria/apps/default/overseerr/ks.yaml
+++ b/kubernetes/moria/apps/default/overseerr/ks.yaml
@@ -11,9 +11,9 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: synology-csi-driver
-    - name: volsync
     - name: external-secrets-stores
+    - name: rook-ceph
+    - name: volsync
   path: ./kubernetes/moria/apps/default/overseerr/app
   prune: true
   sourceRef:
@@ -29,6 +29,3 @@ spec:
       GATUS_SUBDOMAIN: requests
       GATUS_PATH: /api/v1/status
       VOLSYNC_CAPACITY: 5Gi
-      VOLSYNC_STORAGECLASS: syno-iscsi-delete
-      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
-      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
