--- a/kubernetes/moria/apps/default/prowlarr/ks.yaml
+++ b/kubernetes/moria/apps/default/prowlarr/ks.yaml
@@ -12,9 +12,9 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cloudnative-pg-cluster
-    - name: synology-csi-driver
-    - name: volsync
     - name: external-secrets-stores
+    - name: rook-ceph
+    - name: volsync
   path: ./kubernetes/moria/apps/default/prowlarr/app
   prune: true
   sourceRef:
@@ -27,6 +27,3 @@ spec:
   postBuild:
     substitute:
       APP: *app
-      VOLSYNC_STORAGECLASS: syno-iscsi-delete
-      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
-      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
