--- a/kubernetes/moria/apps/default/sabnzbd/ks.yaml
+++ b/kubernetes/moria/apps/default/sabnzbd/ks.yaml
@@ -11,9 +11,9 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: synology-csi-driver
-    - name: volsync
     - name: external-secrets-stores
+    - name: rook-ceph
+    - name: volsync
   path: ./kubernetes/moria/apps/default/sabnzbd/app
   prune: true
   sourceRef:
@@ -26,8 +26,4 @@ spec:
   postBuild:
     substitute:
       APP: *app
-      GATUS_SUBDOMAIN: sab
       VOLSYNC_CAPACITY: 1Gi
-      VOLSYNC_STORAGECLASS: syno-iscsi-delete
-      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
-      #VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
