--- a/kubernetes/moria/apps/default/tautulli/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/tautulli/app/helmrelease.yaml
@@ -23,10 +23,8 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: synology-csi-driver
+    - name: rook-ceph
       namespace: storage
-    - name: volsync
-      namespace: volsync-system
   values:
     controllers:
       tautulli:
