--- a/kubernetes/moria/apps/default/valheim/ks.yaml
+++ b/kubernetes/moria/apps/default/valheim/ks.yaml
@@ -11,10 +11,10 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: synology-csi-driver
-    - name: volsync
     - name: external-secrets-stores
-  path: "./kubernetes/moria/apps/default/valheim/app"
+    - name: rook-ceph
+    - name: volsync
+  path: ./kubernetes/moria/apps/default/valheim/app
   prune: true
   sourceRef:
     kind: GitRepository
