sync volume changes back to flux and pray

--- a/kubernetes/moria/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -28,8 +28,6 @@ spec:
   dependsOn:
     - name: prometheus-operator-crds
       namespace: observability
-    - name: openebs
-      namespace: openebs-system
   values:
     crds:
       enabled: false
@@ -48,7 +46,7 @@ spec:
         storage:
           volumeClaimTemplate:
             spec:
-              storageClassName: openebs-hostpath
+              storageClassName: ceph-rbd-retain
               resources:
                 requests:
                   storage: 1Gi
@@ -111,7 +109,7 @@ spec:
           - memory-snapshot-on-shutdown
           - new-service-discovery-manager
         retention: 14d
-        retentionSize: 70GB
+        retentionSize: 40GB
         resources:
           requests:
             cpu: 100m
@@ -120,10 +118,10 @@ spec:
         storageSpec:
           volumeClaimTemplate:
             spec:
-              storageClassName: syno-iscsi-retain
+              storageClassName: ceph-rbd-retain
               resources:
                 requests:
-                  storage: 75Gi
+                  storage: 50Gi
     nodeExporter:
       enabled: true
     prometheus-node-exporter:
