--- a/kubernetes/moria/apps/default/tautulli/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/tautulli/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: rook-ceph
+    - name: rook-ceph-cluster
       namespace: storage
   values:
     controllers:
