--- a/kubernetes/moria/apps/network/netalertx/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/network/netalertx/app/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: rook-ceph
+    - name: rook-ceph-cluster
       namespace: storage
     - name: volsync
       namespace: volsync-system
