--- a/kubernetes/moria/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -123,7 +123,7 @@ spec:
                 requests:
                   storage: 50Gi
     nodeExporter:
-      enabled: true
+      enabled: false
     prometheus-node-exporter:
       fullnameOverride: node-exporter
       prometheus:
