--- a/kubernetes/moria/apps/observability/kustomization.yaml
+++ b/kubernetes/moria/apps/observability/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./goldilocks/ks.yaml
-  - ./grafana/ks.yaml
-  - ./kube-prometheus-stack/ks.yaml
-  - ./prometheus-operator-crds/ks.yaml
+#  - ./grafana/ks.yaml
+#  - ./kube-prometheus-stack/ks.yaml
+#  - ./prometheus-operator-crds/ks.yaml
