--- a/kubernetes/moria/apps/default/kustomization.yaml
+++ b/kubernetes/moria/apps/default/kustomization.yaml
@@ -25,7 +25,7 @@ resources:
 #  - ./prowlarr/ks.yaml
 #  - ./readarr/ks.yaml
 ##
-  - ./redlib/ks.yaml
+##  - ./redlib/ks.yaml
 ##
 #  - ./sabnzbd/ks.yaml
 #  - ./tautulli/ks.yaml
