hoarder and homepage are retired

--- a/kubernetes/moria/apps/default/kustomization.yaml
+++ b/kubernetes/moria/apps/default/kustomization.yaml
@@ -6,8 +6,8 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Apps
-  - ./hoarder/ks.yaml
-  - ./homepage/ks.yaml
+#  - ./hoarder/ks.yaml
+#  - ./homepage/ks.yaml
   - ./kavita/ks.yaml
 ##
 # borked during csi migration
