--- a/kubernetes/moria/apps/default/kustomization.yaml
+++ b/kubernetes/moria/apps/default/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   # Apps
 #  - ./hoarder/ks.yaml
 #  - ./homepage/ks.yaml
-  - ./kavita/ks.yaml
+#  - ./kavita/ks.yaml
 ##
 # borked during csi migration
 #  - ./librechat/ks.yaml
@@ -19,8 +19,8 @@ resources:
 ##
 #  - ./overseerr/ks.yaml
 ##
-  - ./pgadmin/ks.yaml
-  - ./plex/ks.yaml
+#  - ./pgadmin/ks.yaml
+#  - ./plex/ks.yaml
 ##
 #  - ./prowlarr/ks.yaml
 #  - ./readarr/ks.yaml
